--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-scripts": "2.1.3",
+    "react-spring": "^7.2.10",
     "typed.js": "^2.0.9"
   },
   "scripts": {
